--- a/ecom/templates/cart/wishlist.html
+++ b/ecom/templates/cart/wishlist.html
@@ -20,7 +20,7 @@
 						        <th>&nbsp;</th>
 						        <th>Product</th>
 						        <th>Price</th>
-						        <th>Stock</th>
+						        <!-- <th>Stock</th> -->
 						        <th></th>
 						      </tr>
 						    </thead>
@@ -39,12 +39,13 @@
 						        </td>
 						        
 						        <td class="price">₹{{ wishlist_item.product_id.selling_price }}</td>
-						        {% if wishlist_item.stock == 'In Stock' %}
-						        <td class="total"><span class="bg-success p-1 text-white"> {{wishlist_item.stock}}</span></td>
-                                <td class="total"><a href="/addto_cart/{{wishlist_item.product_id.id}}?next={{ request.path }}" class="btn btn-primary "> Add to Cart </a></td>
-                                {% else %}
+						        <!-- {% if wishlist_item.stock == 'In Stock' %} -->
+						        <!-- <td class="total"><span class="bg-success p-1 text-white">  {{wishlist_item.product.stock}}</span></td> -->
+                                <!-- <td class="total"><a href="/addto_cart/{{wishlist_item.product_id.id}}?next={{ request.path }}" class="btn btn-primary "> Add to Cart </a></td> -->
+                                <td class="total"><a href="/singleproduct/{{wishlist_item.product_id.id}}/" class="btn btn-primary "> View detaisl </a></td>
+                                <!-- {% else %}
                                 <td class="total"><span class="bg-danger p-1 text-white"> {{wishlist_item.stock}}</span></td>
-                                {% endif %}
+                                {% endif %} -->
 						        
                         
 						      </tr>
