--- a/ecom/templates/cart/cart.html
+++ b/ecom/templates/cart/cart.html
@@ -12,13 +12,14 @@
 			<div class="container">
 				<div class="row">
     			<div class="col-md-12 ">
-    				<div class="cart-list">
+    				<div class="cart-list" id="reload">
 	    				<table class="table">
 						    <thead class="thead-primary">
 						      <tr class="text-center">
 						        <th>&nbsp;</th>
 						        <th>&nbsp;</th>
 						        <th>Product</th>
+						        <th>Size</th>
 						        <th>Price</th>
 						        <th>Quantity</th>
 						        <th>Total</th>
@@ -31,35 +32,39 @@
                                 
 						        <td class="product-remove"><a href="/remove_cart/{{cart_item.id}}"><span class="ion-ios-close"></span></a></td>
 						        
-						        <td class="image-prod"><a href="/singleproduct/{{cart_item.product_id.id}}"><div class="img" style="width: 200px;  background-image:url({{ cart_item.product_id.image1.url }}); " ></div></a></td>
+						        <td class="image-prod"><a href="/singleproduct/{{cart_item.product.product_id.id}}"><div class="img" style="width: 200px;  background-image:url({{ cart_item.product.product_id.image1.url }}); " ></div></a></td>
 						        
 						        <td class="product-name">
-						        	<h3>{{ cart_item.product_id.brand  }} </h3>
-						        	<p>{{ cart_item.product_id.name }}</p>
+						        	<h3>{{ cart_item.product.product_id.brand  }} </h3>
+						        	<p>{{ cart_item.product.product_id.name }}</p>
 						        </td>
 						        
-						        <td class="price">{{ cart_item.product_id.selling_price }}</td>
+						        <td class="price">{{ cart_item.size }}</td>
+						        <td class="price">{{ cart_item.product.product_id.selling_price }}</td>
 						        
 						        <td class="quantity">
+                                    <input type="hidden" class="pro_id" value="{{cart_item.id}}">
+                                   {% csrf_token %} 
 						        	<div class="input-group mb-3">
                                         <div class="input-group-prepend">
-                                            <a href="/rem_quantity/{{cart_item.id}}" class="quantity-left-minus btn btn-outline-secondary"  >–</a>
+                                            <button class="change_quantity quantity-left-minus btn btn-outline-secondary" data-action="minus" data-product-id="{{ cart_item.id }}">–</button>
                                         </div>
-                                        <input type="number" name="quantity" class="quantity form-control input-number" value="{{ cart_item.quantity }}" min="1" max="100">
+                                        
+                                        <input type="text" name="quantity" class="quantity1 form-control input-number" value="{{ cart_item.quantity }}" min="1" max="100" disabled>
                                         <div class="input-group-append">
-                                            <a href="/add_quantity/{{cart_item.id}}" class="quantity-right-plus btn btn-outline-secondary" >+</a>
+                                            <button class="change_quantity quantity-right-plus btn btn-outline-secondary" data-action="plus" data-product-id="{{ cart_item.id }}">+</button>
                                         </div>
                                     </div>
 					          </td>
-						        
 						        <td class="total">{{cart_item.sub_total}}</td>
-                        
 						      </tr>
+                            
                             {% endfor %}
             
 						    
                             </tbody>
 						  </table>
+                        </div>
 					  </div>
     			</div>
     		</div>
@@ -85,7 +90,7 @@
                         <hr>
                     </form>
             
-                    <div class="cart-total mb-3">
+                    <div class="cart-total mb-3" id="2load">
                         <h3>Cart Totals</h3>
                         <p class="d-flex">
                             <span>Subtotal</span>
@@ -124,6 +129,48 @@
 
   <!-- loader -->
   {% comment %} <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div> {% endcomment %}
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<script>
+
+
+     
+    $(document).ready(function() {
+    $('#reload').on('click', '.change_quantity', function(e) {
+        e.preventDefault();
+        
+        var products_id = $(this).data('product-id');
+
+        var token = $('input[name=csrfmiddlewaretoken]').val();
+         
+        var action = $(this).data('action');
+        $.ajax({
+            method: "POST",
+            url: '/change_quantity/',
+            data:  {
+                'products_id':products_id,
+
+                'action': action,
+                csrfmiddlewaretoken:token
+            },
+            
+            success: function(response) {
+              if(response.status) {
+                console.log(response.status,response.item);
+                   $('#reload').load('/cart/ #reload');
+                   $('#2load').load('/cart/ #2load');
+               }
+            },
+            error: (error) => {
+              console.log(error,'hi');
+            }
+          });
+    
+    });
+
+});
+    
+</script>
+
 
       {% endblock maincontent %}
   </body>
